header + 1er article

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,59 @@
+body {
+  background: lightgrey; }
 
+header, main, footer {
+  padding: 5%; }
+
+header a {
+  text-decoration: none;
+  color: black; }
+  header a:hover {
+    font-weight: bold; }
+header nav {
+  display: none;
+  width: 100%;
+  margin-bottom: 6rem; }
+  header nav ul {
+    display: flex;
+    list-style-type: none;
+    width: 100%;
+    justify-content: space-around; }
+header img {
+  border-radius: 100%;
+  display: block;
+  margin: auto; }
+header h2 {
+  display: block;
+  text-align: center;
+  font-weight: bold;
+  font-size: 8rem;
+  margin: 0; }
+header small {
+  display: block;
+  width: 100%;
+  text-align: center;
+  font-size: 3rem;
+  margin-bottom: 4rem; }
+header div {
+  width: 100%;
+  text-align: center; }
+  header div input {
+    width: 35%;
+    padding: 3rem;
+    border: none;
+    border-radius: 4px; }
+  header div button {
+    padding: 3rem;
+    width: 10%;
+    border: none;
+    border-radius: 0 4px 4px 0;
+    background-color: #60cdae; }
+
+main {
+  display: flex;
+  flex-wrap: wrap; }
+  main .plop {
+    width: 30%;
+    align-self: flex-end; }
 
 /*# sourceMappingURL=style.css.map */
